--- a/Konnect_test/bin/AndroidManifest.xml
+++ b/Konnect_test/bin/AndroidManifest.xml
@@ -7,8 +7,12 @@
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="18" />
-    <permission android:name="android.permission.INTERNET"> </permission>
+    <permission android:name="android.permission.INTERNET"> 
+        </permission>
+        <permission android:name="android.permission.GET_ACCOUNTS"> 
+        </permission>
 <uses-permission android:name="android.permission.INTERNET" />
+<uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -23,6 +27,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".abc"></activity>
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
